--- a/doc/paper/references.bib
+++ b/doc/paper/references.bib
@@ -60,6 +60,16 @@
   Url                      = {http://dx.doi.org/10.1016/j.jcp.2007.11.033}
 }
 
+@Book{astrophysics_textbook,
+  Title                    = {Numerical Methods in Astrophysics: An Introduction},
+  Author                   = {Peter Bodenheimer and others},
+  Publisher                = {CRC Press},
+  Year                     = {2006},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.11.13}
+}
+
 @Article{borisbook,
   Title                    = {Flux-Corrected Transport I. {SHASTA}, A Fluid Transport Algorithm that Works},
   Author                   = {Jay P. Boris and David L. Book},
@@ -86,6 +96,31 @@
   Url                      = {http://dx.doi.org/10.1007/978-3-642-33221-0_8}
 }
 
+@Article{marco_low_mach,
+  Title                    = {Entropy-Based Viscous Regularization for the Multi-D {E}uler Equations in Low-Mach and Transonic Flows},
+  Author                   = {Marc-O. Delchini},
+  Journal                  = {Computers and Fluids},
+  Year                     = {2015},
+  Number                   = {225--244},
+  Volume                   = {118},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.11.13}
+}
+
+@Article{marco_SEM,
+  Title                    = {Viscous Regularization for the Non-equilibrium Seven-Equation Two-Phase Flow Model},
+  Author                   = {Marc-O. Delchini and Jean C. Ragusa and Ray A. Berry},
+  Journal                  = {Journal of Scientific Computing},
+  Year                     = {2016},
+
+  Month                    = {may},
+
+  Doi                      = {10.1007/s10915-016-0217-6},
+  Publisher                = {Springer Nature},
+  Url                      = {http://dx.doi.org/10.1007/s10915-016-0217-6}
+}
+
 @Book{duderstadt,
   Title                    = {Transport Theory},
   Author                   = {James J. Duderstadt and William R. Martin},
@@ -94,6 +129,21 @@
 
   Owner                    = {joshua},
   Timestamp                = {2016.05.03}
+}
+
+@Article{laser_plasmas,
+  Title                    = {Radiation Transport and Atomic Physics Modeling in High-Energy-Density Laser-Produced Plasmas},
+  Author                   = {K. Eidmann},
+  Journal                  = {Laser and Particle Beams},
+  Year                     = {1994},
+
+  Month                    = {June},
+  Number                   = {2},
+  Pages                    = {223--244},
+  Volume                   = {12},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.11.13}
 }
 
 @Article{m_matrix_fiedler,
@@ -130,7 +180,7 @@
 }
 
 @Article{gottlieb,
-  Title                    = {On High Order Strong Stability Preserving Runge-Kutta and Multi Step Time Discretizations},
+  Title                    = {On High Order Strong Stability Preserving {R}unge-{K}utta and Multi Step Time Discretizations},
   Author                   = {Sigal Gottlieb},
   Journal                  = {Journal of Scientific Computing},
   Year                     = {2005},
@@ -152,7 +202,7 @@
 }
 
 @Article{guermond_firstorder,
-  Title                    = {A Maximum-Principle Preserving $C^0$ Finite Element Method for Scalar Conservation Equations},
+  Title                    = {A Maximum-Principle Preserving {$C^0$} Finite Element Method for Scalar Conservation Equations},
   Author                   = {Jean-Luc Guermond and Murtazo Nazarov},
   Journal                  = {Computational Methods in Applied Mechanics and Engineering},
   Year                     = {2014},
@@ -161,7 +211,7 @@
 }
 
 @Article{guermond_secondorder,
-  Title                    = {A Second-Order Maximum Principle Preserving Lagrange Finite Element Technique for Nonlinear Scalar Conservation Equations},
+  Title                    = {A Second-Order Maximum Principle Preserving {L}agrange Finite Element Technique for Nonlinear Scalar Conservation Equations},
   Author                   = {Jean-Luc Guermond and Murtazo Nazarov and Bojan Popov and Yong Yang},
   Journal                  = {SIAM Journal on Numerical Analysis},
   Year                     = {2014},
@@ -209,6 +259,28 @@
   Doi                      = {10.1002/fld}
 }
 
+@Article{kuzmin_general,
+  Title                    = {On the Design of General-Purpose Flux Limiters for Finite Element Schemes. {I}. Scalar Convection},
+  Author                   = {Dmitri Kuzmin},
+  Journal                  = {Journal of Computational Physics},
+  Year                     = {2006},
+  Pages                    = {513--531},
+  Volume                   = {219}
+}
+
+@Article{kuzmin_closepacking,
+  Title                    = {A Flux-Corrected Transport Algorithm for Handling the Close-Packing Limit in Dense Suspensions},
+  Author                   = {Dmitri Kuzmin and Yuliya Gorb},
+  Journal                  = {Journal of Computational and Applied Mathematics},
+  Year                     = {2012},
+  Pages                    = {4944--4951},
+  Volume                   = {236},
+
+  Doi                      = {10.1016/j.cam.2011.10.019},
+  Owner                    = {joshua},
+  Timestamp                = {2016.11.13}
+}
+
 @Book{kuzmin_FCT,
   Title                    = {Flux-Corrected Transport},
   Author                   = {D. Kuzmin and R. L{\"o}hner and S. Turek},
@@ -231,7 +303,7 @@
 }
 
 @Article{lohner,
-  Title                    = {Finite Element Flux-Corrected Transport (FEM-FCT) for the Euler and Navier-Stokes Equations},
+  Title                    = {Finite Element Flux-Corrected Transport ({FEM}-{FCT}) for the {E}uler and {N}avier-{S}tokes Equations},
   Author                   = {R. L\"{o}hner and K. Morgan and J. Peraire and M. Vahdati},
   Journal                  = {International Journal for Numerical Methods in Fluids},
   Year                     = {1987},
@@ -269,8 +341,8 @@
   Author                   = {P. Lesaint and P. A. Raviart},
   Journal                  = {Publications mathématiques et informatique de Rennes},
   Year                     = {1974},
-  Number                   = {S4},
   Pages                    = {1--40},
+  Volume                   = {S4},
 
   Language                 = {eng},
   Publisher                = {Département de Mathématiques et Informatique, Université de Rennes},
@@ -309,8 +381,21 @@
   Timestamp                = {2016.02.23}
 }
 
+@Article{moller_2008,
+  Title                    = {Implicit {FEM-FCT} Algorithms and Discrete {N}ewton Methods for Transient Convection Problems},
+  Author                   = {M. M{\"o}ller and D. Kuzmin and D. Kourounis},
+  Journal                  = {International Journal for Numerical Methods in Fluids},
+  Year                     = {2008},
+  Pages                    = {761--792},
+  Volume                   = {57},
+
+  Doi                      = {10.1002/fld.1654},
+  Owner                    = {joshua},
+  Timestamp                = {2016.11.13}
+}
+
 @MastersThesis{macdonald,
-  Title                    = {Constructing High-Order Runge-Kutta Methods with Embedded Strong-Stability-Preserving Pairs},
+  Title                    = {Constructing High-Order {R}unge-{K}utta Methods with Embedded Strong-Stability-Preserving Pairs},
   Author                   = {Colin Barr Macdonald},
   School                   = {Acadia University},
   Year                     = {2003},
@@ -322,7 +407,7 @@
 }
 
 @Conference{maginot_mc2015,
-  Title                    = {A Non-Negative, Non-Linear Petrov-Galerkin Method for Bilinear Discontinuous Differencing of the Sn Equations},
+  Title                    = {A Non-Negative, Non-Linear {P}etrov-{G}alerkin Method for Bilinear Discontinuous Differencing of the {S}n Equations},
   Author                   = {Peter Maginot},
   Booktitle                = {Joint International Conference on Mathematics and Computation, Supercomputing in Nuclear Applications, and the Monte Carlo Method (M\&C 2015)},
   Year                     = {2015},
@@ -375,7 +460,7 @@
   Author                   = {A. K. Parrott and M. A. Christie},
   Booktitle                = {Proceedings on the ICFD Conference on Numerical Methods in Fluid Dynamics},
   Year                     = {1986},
-  Number                   = {609},
+  Pages                    = {609},
   Publisher                = {Oxford University Press},
 
   Owner                    = {joshua},
@@ -383,7 +468,7 @@
 }
 
 @Article{plemmons,
-  Title                    = {M-Matrix Characterizations I. -- Nonsingular M-Matrices},
+  Title                    = {M-Matrix Characterizations {I}. -- Nonsingular M-Matrices},
   Author                   = {R. J. Plemmins},
   Journal                  = {Linear Algebra and its Applications},
   Year                     = {1977},
@@ -406,14 +491,43 @@
   Volume                   = {29}
 }
 
-@InBook{Reed_Hill_1973,
+@TechReport{Reed_Hill_1973,
   Title                    = {Triangular mesh methods for the neutron transport equation},
   Author                   = {Reed, W.H. and Hill, T.R.},
+  Institution              = {Los Alamos Scientific Laboratory},
   Year                     = {1973},
-  Month                    = {Oct},
+  Number                   = {LA-UR-73-479},
 
-  Place                    = {United States},
-  Url                      = {http://www.osti.gov/scitech/servlets/purl/4491151}
+  Place                    = {United States}
+}
+
+@Article{schar,
+  Title                    = {A Synchronous and Iterative Flux-Correction Formalism for Coupled Transport Equations},
+  Author                   = {Christoph Sch\:{a}r and Piotr K. Smolarkiewicz},
+  Journal                  = {Journal of Computational Physics},
+  Year                     = {1996},
+  Number                   = {1},
+  Pages                    = {101--120},
+  Volume                   = {128},
+
+  Doi                      = {10.1006/jcph.1996.0198},
+  Owner                    = {joshua},
+  Timestamp                = {2016.11.13}
+}
+
+@Article{radiotherapy,
+  Title                    = {Optimal Treatment Planning in Radiotherapy Based on {B}oltzmann Transport Calculations},
+  Author                   = {M. Sch\"{a}fer and M. Frank and M. Herty},
+  Journal                  = {Mathematical Models and Methods in Applied Sciences},
+  Year                     = {2008},
+  Number                   = {4},
+  Pages                    = {573--592},
+  Volume                   = {18},
+
+  Booktitle                = {Proceedings in Applied Mathematics and Mechanics},
+  Doi                      = {10.1142/S0218202508002784},
+  Owner                    = {joshua},
+  Timestamp                = {2016.11.13}
 }
 
 @Book{toro2009,
@@ -500,3 +614,4 @@
   Adsurl                   = {http://adsabs.harvard.edu/abs/2013CMAME.253..479Z},
   Doi                      = {10.1016/j.cma.2012.08.018}
 }
+
